[gd_scene load_steps=5 format=3 uid="uid://bsqw1bcfuxbvr"]

[ext_resource type="Texture2D" uid="uid://k7j8cw4nydjs" path="res://assets/ui/icons/16/Pause.png" id="1_e73up"]
[ext_resource type="Script" path="res://src/ui/building_ui/time_control_ui.gd" id="1_v2smd"]
[ext_resource type="Texture2D" uid="uid://bjljqn084deoh" path="res://assets/ui/icons/16/Chevron-Arrow-Right.png" id="2_dcbxh"]
[ext_resource type="Texture2D" uid="uid://cnkx1q8u7fgaj" path="res://assets/ui/icons/16/Double-Chevron-Arrow-Right.png" id="3_38juo"]

[node name="TimeControlUI" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -20.0
offset_right = 84.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v2smd")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PauseContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer/PauseContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer/PauseContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_e73up")
expand_mode = 1
stretch_mode = 3

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Speed1Container" type="MarginContainer" parent="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer/Speed1Container"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer/Speed1Container"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_dcbxh")
expand_mode = 1
stretch_mode = 3

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Speed2Container" type="MarginContainer" parent="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer/Speed2Container"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer/Speed2Container"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_38juo")
expand_mode = 1
stretch_mode = 3

[connection signal="pressed" from="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer/PauseContainer/Button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer/Speed1Container/Button" to="." method="_on_speed_1_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/MarginContainer/HBoxContainer/Speed2Container/Button" to="." method="_on_speed_2_button_pressed"]
